test/negative/field_application.mli.expected

*******************************
********** Parsed file ********
*******************************
type t = {
  a: int }
val f : t -> int[@@gospel {| r = f x
      ensures r = a x |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t = {
a: int }
  

val f : t -> int
(*@ r = f x
    ensures ...
     *)
File "field_application.mli", line 5, characters 18-19:
Error: Symbol a not found
